syntax = "proto3";

package vcs.v1;

service VCSService {
  rpc GithubApp(GithubAppRequest) returns (GithubAppResponse) {}
  rpc GithubLogin(GithubLoginRequest) returns (GithubLoginResponse) {}
  rpc GetFile(GetFileRequest) returns (GetFileResponse) {}
}
message GithubAppRequest {}

message GithubAppResponse {
  string clientID = 1;
}

message GithubLoginRequest {
  string authorizationCode = 1;
}

message GithubLoginResponse {}

message GetFileRequest {
  // the full path to the repository
  string repositoryURL = 1;
  // the vcs ref to get the file from
  string ref = 2;
  // the path to the file as provided by the symbols
  string localPath = 3;
}

message GetFileResponse {
  // base64 content of the file
  string content = 1;
  // the full URL to the file
  string URL = 2;
}
